--- a/events-hub/package.json
+++ b/events-hub/package.json
@@ -15,13 +15,12 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
-    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "~13.3.0",
-    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@tailwindcss/forms": "^0.5.2",
+    "bootstrap": "^5.2.0",
     "md5-typescript": "^1.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
